######################################################
#            PROJECT  : svUnitTest                   #
#            VERSION  : 0.1.0                        #
#            DATE     : 01/2011                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

set(FAKECPPUNIT_SRC fakecppunit.cpp)
add_library(fcppunit ${FAKECPPUNIT_SRC})
