######################################################
#            PROJECT  : svUnitTest                   #
#            VERSION  : 0.2.0                        #
#            DATE     : 02/2011                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

set(FAKECPPUNIT_SRC fakecppunit.cpp)
add_library(fcppunit ${FAKECPPUNIT_SRC})
