######################################################
#            PROJECT  : svUnitTest                   #
#            VERSION  : 0.3.0-dev                    #
#            DATE     : 03/2011                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

set(FAKECPPUNIT_SRC fakecppunit.cpp)
add_library(fcppunit ${FAKECPPUNIT_SRC})
