######################################################
#            PROJECT  : svUnitTest                   #
#            VERSION  : 0.4.0                        #
#            DATE     : 11/2012                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

set(FAKECPPUNIT_SRC fakecppunit.cpp)
add_library(fcppunit ${FAKECPPUNIT_SRC})
