######################################################
#            PROJECT  : svUnitTest                   #
#            VERSION  : 0.5.0-dev                    #
#            DATE     : 11/2012                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C 2.1                 #
######################################################

set(FAKECPPUNIT_SRC fakecppunit.cpp)
add_library(fcppunit ${FAKECPPUNIT_SRC})
