######################################################
#            PROJECT  : svUnitTest                   #
#            VERSION  : 0.5.0-dev                    #
#            DATE     : 11/2012                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

if HAVE_SVUNITTEST
bin_PROGRAMS=testString
testString_SOURCES=testString.cpp
testString_LDADD=@svUnitTest_LIBS@
testString_CXXFLAGS=@svUnitTest_CFLAGS@
TESTS=testString
endif