######################################################
#            PROJECT  : svUnitTest                   #
#            VERSION  : 0.3.0-dev                    #
#            DATE     : 03/2011                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

add_library(svunittest_fake STATIC svutTestCase.cpp svutDefaultMain.cpp svutAsserter.cpp)